# auqarium-dashboad

./: README.md
docs/: index.html  style.css
receiver/: CMakeLists.txt  sdkconfig  sdkconfig.old
receiver/components/esp_lcd_ili9341/include/: esp_lcd_ili9341.h
receiver/main/: CMakeLists.txt  font8x8_basic.h  idf_component.yml  main.c  servo.html
receiver/main/espnow_recv/: espnow_recv.c  espnow_recv.h
receiver/main/motor/: motor.c  motor.h
receiver/main/servo/: feeder.c  feeder.h
receiver/main/tft/: tft.c  tft.h
receiver/main/web/: web_server.c  web_server.h
receiver/main/wifi/: wifi.c  wifi.h
sender/: CMakeLists.txt  sdkconfig  sdkconfig.old
sender/main/: CMakeLists.txt  main.c
sender/main/ds18b20/: ds18b20.c  ds18b20.h
sender/main/oled/: oled.c  oled.h
sender/main/sensor/: sensor.c  sensor.h
sender/main/servo/: feeder.c
sender/main/v2.0/: v2.c
sender/main/web/: web_server.c
sender/main/wifi/: wifi.c  wifi.h
web/: script.js
